// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayListItem > renders correctly when current (selected) 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between mx-auto w-full p-3 rounded-lg cursor-pointer transition-colors group bg-ember-100 dark:bg-ink-800 shadow-sm"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="font-medium text-ink-900 dark:text-ink-50"
      >
        Test Song
      </span>
      <span
        class="text-sm text-ink-500 dark:text-ink-400"
      >
        Test Artist
      </span>
    </div>
    <span
      class="text-sm text-ink-400 dark:text-ink-500 font-mono group-hover:text-ink-600 dark:group-hover:text-ink-300"
    >
      5:00
    </span>
  </div>
</DocumentFragment>
`;

exports[`PlayListItem > renders correctly when not current 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-between mx-auto w-full p-3 rounded-lg cursor-pointer transition-colors group hover:bg-ocean-50 dark:hover:bg-ink-800/50"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="font-medium text-ink-700 dark:text-ink-200"
      >
        Test Song
      </span>
      <span
        class="text-sm text-ink-500 dark:text-ink-400"
      >
        Test Artist
      </span>
    </div>
    <span
      class="text-sm text-ink-400 dark:text-ink-500 font-mono group-hover:text-ink-600 dark:group-hover:text-ink-300"
    >
      5:00
    </span>
  </div>
</DocumentFragment>
`;
